force-app/main/default/objects/Custom_Event__c/fields/Event_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Event_Subtype__c</fullName>
    <label>Event Subtype</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_Event_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Cars</fullName>
            </value>
            <value>
                <fullName>National Politics</fullName>
            </value>
            <value>
                <fullName>International Politics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>