force-app/main/default/objects/Custom_Event__c/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>