force-app/main/default/objects/Custom_Event__c/fields/Main_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Event_Type__c</fullName>
    <description>Sport
Politics</description>
    <label>Main Event Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Politics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>