force-app/main/default/objects/Custom_Event__c/fields/Some_Date__c.field-meta.xml
<CustomField>
    <fullName>Some_Date__c</fullName>
    <description>Some_Date</description>
    <label>Some Date</label>
    <type>Date</type>
</CustomField>