force-app/main/default/objects/Custom_Event__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The day the event started</description>
    <inlineHelpText>this is a field to hold information about the day of the event</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>