force-app/main/default/objects/Custom_Event__c/fields/Total_Remaining_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_Remaining_Days__c</fullName>
    <description>Sum of total remaining days</description>
    <label>Total Remaining Days</label>
    <summarizedField>Event_Session__c.Remaining_Days__c</summarizedField>
    <summaryForeignKey>Event_Session__c.Custom_Event__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>